--- a/src/components/Layout/Header/MobileHeader.astro
+++ b/src/components/Layout/Header/MobileHeader.astro
@@ -12,7 +12,7 @@ const homeUrl = `${Astro.url.origin}/${currentLang}`;
   <div class="flex flex-row gap-x-8">
     <MenuToggle client:only="react" />
     <a href={homeUrl} class="self-center">
-      <img src="/images/Adjust-icon.svg" alt="adjust-icon" />
+      <img src="/images/AppLovin.svg" alt="adjust-icon" />
     </a>
   </div>
   <a href={`${homeUrl}/search`}>
