--- a/src/components/Callout.astro
+++ b/src/components/Callout.astro
@@ -1,5 +1,5 @@
 ---
-import { Banner } from "@adjust/components";
+/* import { Banner } from "@adjust/components"; */
 import { toSentenceCase } from "@components/utils/convertCase";
 
 // We have two props that must be present in all banners:
@@ -53,11 +53,13 @@ if (Astro.slots.has("default")) {
 
 <!-- Pass the assigned information to the BuildBanner React component -->
 <div class="my-7">
-  <Banner
+<p>Banner OMITTED</p>
+<div>
+  <!-- Banner
     client:only="react"
     title={title ? title : typeTitle}
     kind={bannerType}
-  >
+  -->
     <Fragment set:html={content} slot="description" />
-  </Banner>
+  <!-- /Banner -->
 </div>
