--- a/src/components/Icon.astro
+++ b/src/components/Icon.astro
@@ -1,19 +1,19 @@
 ---
-import type { IconColor, IconName, IconSize } from "@adjust/components";
-import { Icon as AtlasIcon } from "@adjust/components";
+// import type { IconColor, IconName, IconSize } from "@adjust/components";
+// import { Icon as AtlasIcon } from "@adjust/components";
 // Icons must be supported by Atlas's Icon component.
 // https://atlas.adeven.com/docs/components/Icon#available-icons
-export interface Props {
-  name: IconName;
-  color?: IconColor;
-  size?: IconSize;
-}
-const { name, color, size } = Astro.props as Props;
+// export interface Props {
+//   name: IconName;
+//   color?: IconColor;
+//   size?: IconSize;
+// }
+// const { name, color, size } = Astro.props as Props;
 ---
 
-<AtlasIcon
+<!-- AtlasIcon
   client:only="react"
   name={name}
   color={color ?? "#0b0d18"}
   size={size ?? "medium"}
-/>
+/ -->
