--- a/src/components/Layout/Header/MainHeader.astro
+++ b/src/components/Layout/Header/MainHeader.astro
@@ -1,5 +1,5 @@
 ---
-import { Icon } from "@adjust/components";
+// import { Icon } from "@adjust/components";
 
 import { getLanguageFromURL } from "@i18n/locales";
 import AudienceDropdown from "../AudienceDropdown";
@@ -18,21 +18,18 @@ const homeUrl = `${Astro.url.origin}/${currentLang}`;
 >
   <div class="header-dropdown flex flex-row gap-x-[14px]">
     <a href={homeUrl} class="self-center">
-      <img src="/images/Adjust-icon.svg" alt="adjust-icon" />
+      <img src="/images/AppLovin.svg" alt="adjust-icon" />
     </a>
     <AudienceDropdown client:only="react" />
   </div>
   <div class="header-links flex gap-x-10">
-    <a class="font-medium hover:text-link-active" href={HELP_CENTER_LINK}
-      >Help Center</a
-    >
+    <a class="font-medium hover:text-link-active" href={HELP_CENTER_LINK}>Help Center</a>
     <a href="https://suite.adjust.com/login">
-      <span class="mr-2 font-medium hover:text-link-active"
-        >Adjust Dashboard</span
-      >
-      <span class="header-links_icon"
-        ><Icon name="ArrowRight" client:only="react" /></span
-      >
+      <span class="mr-2 font-medium hover:text-link-active">Adjust Dashboard</span >
+      <span class="header-links_icon">
+<!-- Icon name="ArrowRight" client:only="react" / -->
+      <p>⇾</p>
+      </span>
     </a>
   </div>
 </header>
