--- a/src/components/Layout/LeftSidebar/SidebarHeader/SidebarHeader.astro
+++ b/src/components/Layout/LeftSidebar/SidebarHeader/SidebarHeader.astro
@@ -10,7 +10,7 @@ const { homeUrl } = Astro.props as SidebarHeaderProps;
 
 <div class="sidebar-header flex flex-row items-center mb-[74px] pt-7 pl-[27px]">
   <a href={homeUrl}>
-    <img src="/images/Adjust-icon.svg" alt="adjust-icon" />
+    <img src="/images/AppLovin.svg" alt="adjust-icon" />
   </a>
   <AudienceDropdown client:load />
 </div>
