--- a/src/components/MinorVersion.astro
+++ b/src/components/MinorVersion.astro
@@ -1,5 +1,5 @@
 ---
-import { Badge as AtlasBadge, type IconName} from "@adjust/components";
+// import { Badge as AtlasBadge, type IconName} from "@adjust/components";
 
 export interface Props {
   added?: string;
@@ -9,37 +9,37 @@ export interface Props {
 
 const {added, changed, removed} = Astro.props as Props;
 
-let badgeIcon: IconName = "Info"
+// let badgeIcon: IconName = "Info"
 let version: string | undefined
 let color: BadgeColor = "neutral"
 
 if (added) {
   version = `Added in ${added}`
-  badgeIcon = "Check"
+//  badgeIcon = "Check"
   color = "positive"
 }
 
 if (changed) {
   version = `Changed in ${changed}`
-  badgeIcon = "Negative"
+//  badgeIcon = "Negative"
   color = "warning"
 }
 
 if (removed) {
   version = `Deprecated in ${removed}`
-  badgeIcon = "Cross"
+//  badgeIcon = "Cross"
   color = "negative"
 }
 
 ---
 
-<AtlasBadge
+<!-- AtlasBadge
   client:only="react"
   color={color}
   iconName={badgeIcon}
   label={version}
   css={{ marginBottom: "1rem" }}
   allowFullWidth
-/>
+/ -->
 <slot />
 
