--- a/src/pages/[lang]/index.astro
+++ b/src/pages/[lang]/index.astro
@@ -28,7 +28,7 @@ const topCategories = [
     title: "API",
     icon: "/images/api-icon.svg",
     iconAlt: "api-icon",
-    link: `${lang}/api`,
+    link: `${lang}/max`,
   },
 ];
 
