--- a/src/components/Callout.astro
+++ b/src/components/Callout.astro
@@ -1,5 +1,5 @@
 ---
-/* import { Banner } from "@adjust/components"; */
+import { Banner } from "@adjust/components";
 import { toSentenceCase } from "@components/utils/convertCase";
 
 // We have two props that must be present in all banners:
@@ -49,17 +49,22 @@ let content = "";
 if (Astro.slots.has("default")) {
   content = await Astro.slots.render("default");
 }
+
 ---
 
-<!-- Pass the assigned information to the BuildBanner React component -->
+<!-- Pass the assigned information to the BuildBanner React component
 <div class="my-7">
-<p>Banner OMITTED</p>
-<div>
-  <!-- Banner
+  <Banner
     client:only="react"
     title={title ? title : typeTitle}
     kind={bannerType}
-  -->
+  >
     <Fragment set:html={content} slot="description" />
-  <!-- /Banner -->
+  </Banner>
 </div>
+-->
+
+<table>
+ <thead><tr><th>{title ? title : typeTitle}:{bannerType}</th></tr></thead>
+ <tbody><tr><td><Fragment set:html={content} slot="description" /></td></tr></tbody>
+</table>
