finish getting started page

--- a/src/components/Abbr.astro
+++ b/src/components/Abbr.astro
@@ -65,6 +65,7 @@ abbreviations['IVT']    = 'invalid traffic';
 abbreviations['JPEG']   = 'Joint Photographic Experts Group (graphics file type)';
 abbreviations['JPG']    = 'Joint Photographic Experts Group (graphics file type)';
 abbreviations['JSON']   = 'JavaScript Object Notation';
+abbreviations['LAT']    = 'Limit Ad Tracking';
 abbreviations['LDU']    = 'Limited Data Use';
 abbreviations['LTE']    = 'Long-Term Evolution';
 abbreviations['MB']     = 'megabytes';
@@ -83,6 +84,7 @@ abbreviations['PMP']    = 'private marketplace';
 abbreviations['PNG']    = 'Portable Network Graphic';
 abbreviations['POM']    = 'Project Object Model';
 abbreviations['px']     = 'pixels';
+abbreviations['QA']     = 'quality assurance';
 abbreviations['REST']   = 'Representational State Transfer';
 abbreviations['ROAS']   = 'return on ad spend';
 abbreviations['RTB']    = 'real-time bidding';
