--- a/src/components/Glossary.astro
+++ b/src/components/Glossary.astro
@@ -118,7 +118,9 @@ glossary['game monetization'] = { "page":'mobile-game-monetization', "title":'Mo
 glossary['gaming'] = { "page":'mobile-gaming', "title":'Mobile gaming is the most popular form of gaming in the world…' };
 glossary['gdpr'] = { "page":'gdpr', "title":'GDPR (General Data Protection Regulation) is a European Union law…' };
 glossary['general data protection regulation'] = { "page":'gdpr', "title":'GDPR (General Data Protection Regulation) is a European Union law…' };
+glossary['google advertising id'] = { "page":'gaid', "title":'Google Advertiser Identity (GAID) is a device identifier for advertisers…' };
 glossary['google advertiser identity'] = { "page":'gaid', "title":'Google Advertiser Identity (GAID) is a device identifier for advertisers…' };
+glossary['google advertising identifier'] = { "page":'gaid', "title":'Google Advertiser Identity (GAID) is a device identifier for advertisers…' };
 glossary['hardcore game'] = { "page":'hardcore-games', "title":'Hardcore games are those that require players to invest a lot of time to learn…' };
 glossary['hardcore games'] = { "page":'hardcore-games', "title":'Hardcore games are those that require players to invest a lot of time to learn…' };
 glossary['hardcore'] = { "page":'hardcore-games', "title":'Hardcore games are those that require players to invest a lot of time to learn…' };
