enable networks and advanced setup pages

--- a/src/components/Abbr.astro
+++ b/src/components/Abbr.astro
@@ -68,6 +68,7 @@ abbreviations['JSON']   = 'JavaScript Object Notation';
 abbreviations['LAT']    = 'Limit Ad Tracking';
 abbreviations['LDU']    = 'Limited Data Use';
 abbreviations['LTE']    = 'Long-Term Evolution';
+abbreviations['LTV']    = 'lifetime value';
 abbreviations['MB']     = 'megabytes';
 abbreviations['MIME']   = 'Multipurpose Internet Mail Extensions';
 abbreviations['MMP']    = 'mobile measurement partner';
