customize footer, add another page

--- a/src/components/Layout/Footer/FooterContent.astro
+++ b/src/components/Layout/Footer/FooterContent.astro
@@ -67,6 +67,6 @@ const fullYear = new Date().getFullYear();
   <div
     class="h-[41px] w-full bg-main-blue-30 absolute bottom-0 px-12 flex items-center text-xs text-primary"
   >
-    © {fullYear} Adjust GmbH. All rights reserved
+    Copyright {fullYear} by AppLovin
   </div>
 </footer>
