--- a/src/components/Layout/Footer/ContactSupportBlock/ContactSupportButton/index.astro
+++ b/src/components/Layout/Footer/ContactSupportBlock/ContactSupportButton/index.astro
@@ -1,13 +1,15 @@
 ---
-import { HELP_CENTER_LINK } from "src/consts";
+// import { HELP_CENTER_LINK } from "src/consts";
 
 import type { IWithLanguage } from "src/types/WithLanguage";
 
 const { language, contentLevel } = Astro.props as IWithLanguage;
+
+//  href={`${HELP_CENTER_LINK}${language}/support`}
 ---
 
 <a
-  href={`${HELP_CENTER_LINK}${language}/support`}
+  href="https://support.applovin.com/hc/en-us/requests/new"
   class="footer-link flex items-center justify-center px-3 min-h-[39px] text-white bg-link-active rounded-[7.5px] border-2 border-white cursor-pointer min-w-[206px] text-[17px] font-medium hover:bg-[#324ed9]"
 >
   {contentLevel ? "Contact Us" : "Contact Support"}
