--- a/src/components/Layout/PageContent/article.css
+++ b/src/components/Layout/PageContent/article.css
@@ -460,3 +460,29 @@ dl > dd {
     }
   }
 }
+
+/* Begin PLP Consulting's additions: */
+a.glossary {
+  text-decoration: none;
+  text-shadow: 0px 0px 6px #0cf;
+  color: currentColor;
+  position: relative;
+  cursor: help;
+}
+
+a.glossary::after {
+  background-color: currentColor;
+  opacity: 0;
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: -.125em;
+  content: "";
+  height: .125em;
+}
+
+abbr[title] {
+  border-bottom: none;
+  cursor: help;
+  text-decoration: none;
+}
