--- a/src/components/Abbr.astro
+++ b/src/components/Abbr.astro
@@ -13,6 +13,7 @@ abbreviations['a.k.a.'] = 'also known as';
 abbreviations['ALX']    = 'AppLovin Exchange';
 abbreviations['API']    = 'application programming interface';
 abbreviations['APS']    = 'Amazon Publisher Services';
+abbreviations['ARPDAU'] = 'Average Revenue Per Daily Active User';
 abbreviations['ASIN']   = 'Amazon Standard Identification Number';
 abbreviations['ATP']    = 'Ad Technology Provider';
 abbreviations['ATS']    = 'App Transport Security';
@@ -29,6 +30,8 @@ abbreviations['CPP']    = 'cost per point';
 abbreviations['CSV']    = 'comma-separated values';
 abbreviations['CTA']    = 'call to action';
 abbreviations['CTV']    = 'Connected Television';
+abbreviations['DAU']    = 'daily active users';
+abbreviations['DAV']    = 'daily active viewers';
 abbreviations['DMA']    = 'Designated Market Area';
 abbreviations['DNT']    = 'do not track';
 abbreviations['dp']     = 'density-independent pixels';
@@ -56,6 +59,7 @@ abbreviations['IDE']    = 'integrated development environment';
 abbreviations['IDFA']   = 'identifier for advertisers';
 abbreviations['IDFV']   = 'identifier for vendors';
 abbreviations['IFA']    = 'identifier for advertisers';
+abbreviations['IMPDAU'] = 'Impressions Per Daily Active User';
 abbreviations['IO']     = 'insertion order';
 abbreviations['iOS']    = 'iPhone Operating System';
 abbreviations['IP']     = 'Internet Protocol';
@@ -69,6 +73,7 @@ abbreviations['LAT']    = 'Limit Ad Tracking';
 abbreviations['LDU']    = 'Limited Data Use';
 abbreviations['LTE']    = 'Long-Term Evolution';
 abbreviations['LTV']    = 'lifetime value';
+abbreviations['MAU']    = 'monthly active users';
 abbreviations['MB']     = 'megabytes';
 abbreviations['MIME']   = 'Multipurpose Internet Mail Extensions';
 abbreviations['MMP']    = 'mobile measurement partner';
