--- a/src/components/Glossary.astro
+++ b/src/components/Glossary.astro
@@ -90,6 +90,7 @@ glossary['creative'] = { "page":'creatives-and-ads', "title":'Creatives are the 
 glossary['creatives'] = { "page":'creatives-and-ads', "title":'Creatives are the assets you use as part of a user acquisition strategy to attract new users…' };
 glossary['ctv'] = { "page":'ctv', "title":'CTV, or Connected TV, is any television that can be used to stream video…' };
 glossary['customer acquisition cost'] = { "page":'cac', "title":'Customer Acquisition Cost (CAC) is an app business metric used to understand how much it costs to acquire a customer…' };
+glossary['daily active user'] = { "page":'dau', "title":'Daily Active Users (DAU) is the number of unique users that log in and start a session…' };
 glossary['daily active users'] = { "page":'dau', "title":'Daily Active Users (DAU) is the number of unique users that log in and start a session…' };
 glossary['dau'] = { "page":'dau', "title":'Daily Active Users (DAU) is the number of unique users that log in and start a session…' };
 glossary['deep linking'] = { "page":'deep-linking', "title":'Deep linking gives developers the ability to send users into a specific page…' };
@@ -322,6 +323,7 @@ glossary['view-through attribution'] = { "page":'view-through-attribution', "tit
 glossary['vta'] = { "page":'view-through-attribution', "title":'View-through attribution (VTA) tracks the impact of display advertising on user behavior.…' };
 glossary['waterfall'] = { "page":'waterfall', "title":'A waterfall refers to the traditional programmatic method of ad buying…' };
 glossary['waterfalls'] = { "page":'waterfall', "title":'A waterfall refers to the traditional programmatic method of ad buying…' };
+glossary['waterfall(s)'] = { "page":'waterfall', "title":'A waterfall refers to the traditional programmatic method of ad buying…' };
 glossary['word game'] = { "page":'word-games', "title":'Word games are simple but come in a variety of designs and concepts…' };
 glossary['word games'] = { "page":'word-games', "title":'Word games are simple but come in a variety of designs and concepts…' };
 
