more pages, tweaks, images

--- a/src/components/Abbr.astro
+++ b/src/components/Abbr.astro
@@ -9,6 +9,7 @@ var abbreviations = [];
 
 abbreviations['3G']     = 'third generation';
 abbreviations['AC']     = 'additional consent';
+abbreviations['ACH']    = 'automated clearing house';
 abbreviations['a.k.a.'] = 'also known as';
 abbreviations['ALX']    = 'AppLovin Exchange';
 abbreviations['API']    = 'application programming interface';
@@ -43,6 +44,8 @@ abbreviations['eCPM']   = 'effective cost per mille';
 abbreviations['EDGE']   = 'Enhanced Data rates for G.S.M. Evolution';
 abbreviations['EEA']    = 'European Economic Area';
 abbreviations['FAQ']    = 'frequently asked questions';
+abbreviations['FAQs']   = 'frequently asked questions';
+abbreviations['FX']     = 'foreign transaction';
 abbreviations['GAID']   = 'Google Advertiser Identity';
 abbreviations['GDPR']   = 'General Data Protection Regulation';
 abbreviations['GIF']    = 'Graphics Interchange Format';
@@ -86,6 +89,7 @@ abbreviations['OMSDK']  = 'Open Measurement Software Development Kit';
 abbreviations['ORMMA']  = 'Open Rich Media Mobile Advertising';
 abbreviations['oRTB']   = 'open real-time bidding';
 abbreviations['OS']     = 'operating system';
+abbreviations['PDF']    = 'portable document format';
 abbreviations['PMP']    = 'private marketplace';
 abbreviations['PNG']    = 'Portable Network Graphic';
 abbreviations['POM']    = 'Project Object Model';
@@ -107,12 +111,14 @@ abbreviations['UMP']    = 'User Messaging Platform';
 abbreviations['UPL']    = 'Unreal Plugin Language';
 abbreviations['URI']    = 'Universal Resource Identifier';
 abbreviations['URL']    = 'uniform resource locator';
+abbreviations['U.S.']   = 'United States of America';
 abbreviations['USA']    = 'United States of America';
 abbreviations['USD']    = 'United States dollar';
 abbreviations['UTC']    = 'Coordinated Universal Time';
 abbreviations['UUID']   = 'universally unique identifier';
 abbreviations['VAST']   = 'Video Ad Serving Template';
 abbreviations['VPAID']  = 'Video Player-Ad Interface Definition';
+abbreviations['vs.']    = 'versus';
 abbreviations['XHTML']  = 'Extensible Hypertext Markup Language';
 
 if (Astro.slots.has("default")) {
