--- a/src/components/Glossary.astro
+++ b/src/components/Glossary.astro
@@ -108,6 +108,7 @@ glossary['dual-screens'] = { "page":'dual-screening', "title":'Dual screening ta
 glossary['dynamic creative ads'] = { "page":'dynamic-creative-ads', "title":'Dynamic creative ads are a type of ad in which the creative content is updated in real time based on predefined parameters set by an advertiser…' };
 glossary['ecpm'] = { "page":'cpm-ecpm', "title":'Cost-Per-Mille (CPM) is a payment model used in mobile app and game advertising…' };
 glossary['effective cost per mille'] = { "page":'cpm-ecpm', "title":'Cost-Per-Mille (CPM) is a payment model used in mobile app and game advertising…' };
+glossary['effective cost per thousand'] = { "page":'cpm-ecpm', "title":'Cost-Per-Mille (CPM) is a payment model used in mobile app and game advertising…' };
 glossary['engagement rate'] = { "page":'ad-viewer-rate', "title":'Ad-viewer rate, also commonly referred to as engagement rate is the percentage of daily active users who engage…' };
 glossary['event callback'] = { "page":'event-callbacks', "title":'Event callbacks in mobile apps are mechanisms used by developers to track specific user actions or occurrences within an app…' };
 glossary['event callbacks'] = { "page":'event-callbacks', "title":'Event callbacks in mobile apps are mechanisms used by developers to track specific user actions or occurrences within an app…' };
@@ -153,8 +154,10 @@ glossary['impressions per daily active user'] = { "page":'impdau', "title":'Impr
 glossary['in-app advertising'] = { "page":'in-app-advertising', "title":'In-app advertising means that a mobile app incorporates advertising into its experience…' };
 glossary['in-app advertisement'] = { "page":'in-app-advertising', "title":'In-app advertising means that a mobile app incorporates advertising into its experience…' };
 glossary['in-app advertisements'] = { "page":'in-app-advertising', "title":'In-app advertising means that a mobile app incorporates advertising into its experience…' };
-glossary['in-app bidding'] = { "page":'in-app-bidding', "title":'In-app bidding is an advanced advertising method…' };
 glossary['in-app bid'] = { "page":'in-app-bidding', "title":'In-app bidding is an advanced advertising method…' };
+glossary['in-app bidding'] = { "page":'in-app-bidding', "title":'In-app bidding is an advanced advertising method…' };
+glossary['in-app bidder'] = { "page":'in-app-bidding', "title":'In-app bidding is an advanced advertising method…' };
+glossary['in-app bidders'] = { "page":'in-app-bidding', "title":'In-app bidding is an advanced advertising method…' };
 glossary['in-app bids'] = { "page":'in-app-bidding', "title":'In-app bidding is an advanced advertising method…' };
 glossary['in-app event'] = { "page":'in-app-events', "title":'In-app events are any activity that a user takes after installing an app…' };
 glossary['in-app events'] = { "page":'in-app-events', "title":'In-app events are any activity that a user takes after installing an app…' };
