--- a/src/components/Abbr.astro
+++ b/src/components/Abbr.astro
@@ -10,19 +10,23 @@ var abbreviations = [];
 abbreviations['3G']     = 'third generation';
 abbreviations['AC']     = 'additional consent';
 abbreviations['ACH']    = 'automated clearing house';
+abbreviations['AI']     = 'artificial intelligence';
 abbreviations['a.k.a.'] = 'also known as';
 abbreviations['ALX']    = 'AppLovin Exchange';
 abbreviations['API']    = 'application programming interface';
 abbreviations['APS']    = 'Amazon Publisher Services';
 abbreviations['ARPDAU'] = 'Average Revenue Per Daily Active User';
+abbreviations['ARPPU']  = 'Average Revenue Per Paying User';
 abbreviations['ASIN']   = 'Amazon Standard Identification Number';
 abbreviations['ATP']    = 'Ad Technology Provider';
 abbreviations['ATS']    = 'App Transport Security';
 abbreviations['ATT']    = 'App Tracking Transparency';
+abbreviations['CAC']    = 'customer acquisition cost';
 abbreviations['CCPA']   = 'California Consumer Privacy Act';
 abbreviations['CI/CD']  = 'continuous integration / continuous delivery';
 abbreviations['CMP']    = 'Consent Management Platform';
 abbreviations['COPPA']  = 'Children’s Online Privacy Protection Act';
+abbreviations['CPA']    = 'cost per action';
 abbreviations['CPC']    = 'cost per click';
 abbreviations['CPE']    = 'cost per engagement';
 abbreviations['CPI']    = 'cost per install';
@@ -30,6 +34,7 @@ abbreviations['CPM']    = 'cost per mille';
 abbreviations['CPP']    = 'cost per point';
 abbreviations['CSV']    = 'comma-separated values';
 abbreviations['CTA']    = 'call to action';
+abbreviations['CTR']    = 'click-through rate';
 abbreviations['CTV']    = 'Connected Television';
 abbreviations['DAU']    = 'daily active users';
 abbreviations['DAV']    = 'daily active viewers';
@@ -43,6 +48,7 @@ abbreviations['DV360']  = 'Display and Video 360';
 abbreviations['eCPM']   = 'effective cost per mille';
 abbreviations['EDGE']   = 'Enhanced Data rates for G.S.M. Evolution';
 abbreviations['EEA']    = 'European Economic Area';
+abbreviations['FAST']   = 'free, ad-supported, streaming television';
 abbreviations['FAQ']    = 'frequently asked questions';
 abbreviations['FAQs']   = 'frequently asked questions';
 abbreviations['FX']     = 'foreign transaction';
@@ -56,6 +62,7 @@ abbreviations['HTTPS']  = 'Hypertext Transfer Protocol, Secure';
 abbreviations['IAB']    = 'Interactive Advertising Bureau';
 abbreviations['IABTL']  = 'Interactive Advertising Bureau Technology Laboratory';
 abbreviations['IAP']    = 'in-app purchase';
+abbreviations['IAPROAS']= 'in-app purchase return on spend';
 abbreviations['IAS']    = 'Integral Ad Science';
 abbreviations['ID']     = 'identifier';
 abbreviations['IDE']    = 'integrated development environment';
@@ -66,12 +73,15 @@ abbreviations['IMPDAU'] = 'Impressions Per Daily Active User';
 abbreviations['IO']     = 'insertion order';
 abbreviations['iOS']    = 'iPhone Operating System';
 abbreviations['IP']     = 'Internet Protocol';
+abbreviations['IPM']    = 'installs per mille';
 abbreviations['IPv4']   = 'Internet Protocol, version 4';
 abbreviations['IPv6']   = 'Internet Protocol, version 6';
+abbreviations['IR']     = 'Install Rate';
 abbreviations['IVT']    = 'invalid traffic';
 abbreviations['JPEG']   = 'Joint Photographic Experts Group (graphics file type)';
 abbreviations['JPG']    = 'Joint Photographic Experts Group (graphics file type)';
 abbreviations['JSON']   = 'JavaScript Object Notation';
+abbreviations['KPI']    = 'key performance indicator';
 abbreviations['LAT']    = 'Limit Ad Tracking';
 abbreviations['LDU']    = 'Limited Data Use';
 abbreviations['LTE']    = 'Long-Term Evolution';
@@ -79,16 +89,22 @@ abbreviations['LTV']    = 'lifetime value';
 abbreviations['MAU']    = 'monthly active users';
 abbreviations['MB']     = 'megabytes';
 abbreviations['MIME']   = 'Multipurpose Internet Mail Extensions';
+abbreviations['MMO']    = 'massively multiplayer, online';
+abbreviations['MMORPG'] = 'massively multiplayer, online, role-playing game';
 abbreviations['MMP']    = 'mobile measurement partner';
 abbreviations['MPX']    = 'MoPub Exchange';
 abbreviations['MRAID']  = 'Mobile Rich Media Ad Interface Definitions';
 abbreviations['MREC']   = 'medium rectangle';
+abbreviations['MVP']    = 'minimum viable product';
+abbreviations['OEM']    = 'original equipment manufacturer';
 abbreviations['OM']     = 'Open Measurement';
 abbreviations['OMID']   = 'Open Measurement Interface Definition';
 abbreviations['OMSDK']  = 'Open Measurement Software Development Kit';
+abbreviations['OOBE']   = 'out-of-the-box experience';
 abbreviations['ORMMA']  = 'Open Rich Media Mobile Advertising';
 abbreviations['oRTB']   = 'open real-time bidding';
 abbreviations['OS']     = 'operating system';
+abbreviations['OTT']    = 'over the top';
 abbreviations['PDF']    = 'portable document format';
 abbreviations['PMP']    = 'private marketplace';
 abbreviations['PNG']    = 'Portable Network Graphic';
@@ -97,11 +113,13 @@ abbreviations['px']     = 'pixels';
 abbreviations['QA']     = 'quality assurance';
 abbreviations['REST']   = 'Representational State Transfer';
 abbreviations['ROAS']   = 'return on ad spend';
+abbreviations['ROI']    = 'return on investment';
 abbreviations['RTB']    = 'real-time bidding';
 abbreviations['S2S']    = 'server-to-server';
 abbreviations['SDK']    = 'software development kit';
 abbreviations['SHA']    = 'secure hashing algorithm';
 abbreviations['SK']     = 'StoreKit';
+abbreviations['SPO']    = 'supply path optimization';
 abbreviations['SSP']    = 'supply-side platform';
 abbreviations['TC']     = 'Transparency Consent';
 abbreviations['TCF']    = 'Transparency &amp; Consent Framework';
@@ -119,6 +137,7 @@ abbreviations['UUID']   = 'universally unique identifier';
 abbreviations['VAST']   = 'Video Ad Serving Template';
 abbreviations['VPAID']  = 'Video Player-Ad Interface Definition';
 abbreviations['vs.']    = 'versus';
+abbreviations['VTA']    = 'view-through attribution';
 abbreviations['XHTML']  = 'Extensible Hypertext Markup Language';
 
 if (Astro.slots.has("default")) {
