AppLovin oRTB Specification

--- a/src/components/Abbr.astro
+++ b/src/components/Abbr.astro
@@ -14,6 +14,7 @@ abbreviations['AI']     = 'artificial intelligence';
 abbreviations['a.k.a.'] = 'also known as';
 abbreviations['ALX']    = 'AppLovin Exchange';
 abbreviations['API']    = 'application programming interface';
+abbreviations['Apr.']   = 'April';
 abbreviations['APS']    = 'Amazon Publisher Services';
 abbreviations['ARPDAU'] = 'Average Revenue Per Daily Active User';
 abbreviations['ARPPU']  = 'Average Revenue Per Paying User';
@@ -38,6 +39,7 @@ abbreviations['CTR']    = 'click-through rate';
 abbreviations['CTV']    = 'Connected Television';
 abbreviations['DAU']    = 'daily active users';
 abbreviations['DAV']    = 'daily active viewers';
+abbreviations['Dec.']   = 'December';
 abbreviations['DMA']    = 'Designated Market Area';
 abbreviations['DNT']    = 'do not track';
 abbreviations['dp']     = 'density-independent pixels';
@@ -51,6 +53,7 @@ abbreviations['EEA']    = 'European Economic Area';
 abbreviations['FAST']   = 'free, ad-supported, streaming television';
 abbreviations['FAQ']    = 'frequently asked questions';
 abbreviations['FAQs']   = 'frequently asked questions';
+abbreviations['Feb.']   = 'February';
 abbreviations['FX']     = 'foreign transaction';
 abbreviations['GAID']   = 'Google Advertiser Identity';
 abbreviations['GDPR']   = 'General Data Protection Regulation';
@@ -77,10 +80,15 @@ abbreviations['IPM']    = 'installs per mille';
 abbreviations['IPv4']   = 'Internet Protocol, version 4';
 abbreviations['IPv6']   = 'Internet Protocol, version 6';
 abbreviations['IR']     = 'Install Rate';
+abbreviations['ISP']    = 'Internet Service Provider';
 abbreviations['IVT']    = 'invalid traffic';
+abbreviations['Jan.']   = 'January';
 abbreviations['JPEG']   = 'Joint Photographic Experts Group (graphics file type)';
 abbreviations['JPG']    = 'Joint Photographic Experts Group (graphics file type)';
 abbreviations['JSON']   = 'JavaScript Object Notation';
+abbreviations['Jul.']   = 'July';
+abbreviations['KB']     = 'kilobytes';
+abbreviations['Kbps']   = 'kilobits per second';
 abbreviations['KPI']    = 'key performance indicator';
 abbreviations['LAT']    = 'Limit Ad Tracking';
 abbreviations['LDU']    = 'Limited Data Use';
@@ -95,6 +103,7 @@ abbreviations['MMP']    = 'mobile measurement partner';
 abbreviations['MPX']    = 'MoPub Exchange';
 abbreviations['MRAID']  = 'Mobile Rich Media Ad Interface Definitions';
 abbreviations['MREC']   = 'medium rectangle';
+abbreviations['ms']     = 'milliseconds';
 abbreviations['MVP']    = 'minimum viable product';
 abbreviations['OEM']    = 'original equipment manufacturer';
 abbreviations['OM']     = 'Open Measurement';
@@ -117,12 +126,16 @@ abbreviations['ROI']    = 'return on investment';
 abbreviations['RTB']    = 'real-time bidding';
 abbreviations['S2S']    = 'server-to-server';
 abbreviations['SDK']    = 'software development kit';
+abbreviations['Sep.']   = 'September';
 abbreviations['SHA']    = 'secure hashing algorithm';
 abbreviations['SK']     = 'StoreKit';
+abbreviations['SKAD']   = 'StoreKit Ad';
+abbreviations['SKAN']   = 'StoreKit Ad Network';
 abbreviations['SPO']    = 'supply path optimization';
 abbreviations['SSP']    = 'supply-side platform';
 abbreviations['TC']     = 'Transparency Consent';
 abbreviations['TCF']    = 'Transparency &amp; Consent Framework';
+abbreviations['TV']     = 'television';
 abbreviations['UA']     = 'user agent';
 abbreviations['UI']     = 'user interface';
 abbreviations['UMP']    = 'User Messaging Platform';
@@ -130,6 +143,7 @@ abbreviations['UPL']    = 'Unreal Plugin Language';
 abbreviations['URI']    = 'Universal Resource Identifier';
 abbreviations['URL']    = 'uniform resource locator';
 abbreviations['U.S.']   = 'United States of America';
+abbreviations['US']     = 'United States of America';
 abbreviations['USA']    = 'United States of America';
 abbreviations['USD']    = 'United States dollar';
 abbreviations['UTC']    = 'Coordinated Universal Time';
@@ -139,6 +153,7 @@ abbreviations['VPAID']  = 'Video Player-Ad Interface Definition';
 abbreviations['vs.']    = 'versus';
 abbreviations['VTA']    = 'view-through attribution';
 abbreviations['XHTML']  = 'Extensible Hypertext Markup Language';
+abbreviations['XML']    = 'Extensible Markup Language';
 
 if (Astro.slots.has("default")) {
   content = await Astro.slots.render("default");
