--- a/src/components/Glossary.astro
+++ b/src/components/Glossary.astro
@@ -120,6 +120,7 @@ glossary['effective cost per thousand'] = { "page":'cpm-ecpm', "title":'Cost-Per
 glossary['engagement rate'] = { "page":'ad-viewer-rate', "title":'Ad-viewer rate, also commonly referred to as engagement rate is the percentage of daily active users who engage…' };
 glossary['event callback'] = { "page":'event-callbacks', "title":'Event callbacks in mobile apps are mechanisms used by developers to track specific user actions or occurrences within an app…' };
 glossary['event callbacks'] = { "page":'event-callbacks', "title":'Event callbacks in mobile apps are mechanisms used by developers to track specific user actions or occurrences within an app…' };
+glossary['exchange'] = { "page":'ad-exchange', "title":'Ad exchanges allow publishers a place to make ad inventory available to potential buyers…' };
 glossary['fill rate'] = { "page":'fill-rate', "title":'Fill rate refers to the percentage of times an ad request is filled by an ad network…' };
 glossary['fast'] = { "page":'fast', "title":'FAST is any streaming service that allows users to watch for free, with costs covered by advertising revenue…' };
 glossary['first-party data'] = { "page":'first-party-data', "title":'First-party data is information that a brand has collected through a direct relationship…' };
@@ -160,6 +161,8 @@ glossary['impdau'] = { "page":'impdau', "title":'Impressions per daily active us
 glossary['impression'] = { "page":'impressions', "title":'An impression is when a user on a device sees an advertisement…' };
 glossary['impressions'] = { "page":'impressions', "title":'An impression is when a user on a device sees an advertisement…' };
 glossary['impressions per daily active user'] = { "page":'impdau', "title":'Impressions per daily active user, or IMPDAU, is a KPI used by developers to measure…' };
+glossary['in-app ad'] = { "page":'in-app-advertising', "title":'In-app advertising means that a mobile app incorporates advertising into its experience…' };
+glossary['in-app ads'] = { "page":'in-app-advertising', "title":'In-app advertising means that a mobile app incorporates advertising into its experience…' };
 glossary['in-app advertising'] = { "page":'in-app-advertising', "title":'In-app advertising means that a mobile app incorporates advertising into its experience…' };
 glossary['in-app advertisement'] = { "page":'in-app-advertising', "title":'In-app advertising means that a mobile app incorporates advertising into its experience…' };
 glossary['in-app advertisements'] = { "page":'in-app-advertising', "title":'In-app advertising means that a mobile app incorporates advertising into its experience…' };
@@ -180,6 +183,7 @@ glossary['install rates'] = { "page":'ir', "title":'IR refers to Install Rate, a
 glossary['interstitial ad'] = { "page":'interstitial-ads', "title":'Interstitial ads are full-screen ads that cover the entirety of an app’s interface…' };
 glossary['interstitial ads'] = { "page":'interstitial-ads', "title":'Interstitial ads are full-screen ads that cover the entirety of an app’s interface…' };
 glossary['interstitial'] = { "page":'interstitial-ads', "title":'Interstitial ads are full-screen ads that cover the entirety of an app’s interface…' };
+glossary['interstitials'] = { "page":'interstitial-ads', "title":'Interstitial ads are full-screen ads that cover the entirety of an app’s interface…' };
 glossary['inventory'] = { "page":'ad-inventory', "title":'Ad inventory is the total amount of ad space a publisher has available for advertisers to buy at any given time…' };
 glossary['ios'] = { "page":'ios', "title":'iOS stands for iPhone Operating System, a mobile operating system…' };
 glossary['ipm'] = { "page":'ipm', "title":'Installs Per Mille (IPM) is the number of times your app is installed per thousand ad impressions…' };
