add more pages, experiment with single-source partial content

--- a/src/components/Abbr.astro
+++ b/src/components/Abbr.astro
@@ -47,6 +47,7 @@ abbreviations['DPA']    = 'Data Processing Agreement';
 abbreviations['DSP']    = 'demand-side platform';
 abbreviations['DT']     = 'Digital Turbine';
 abbreviations['DV360']  = 'Display and Video 360';
+abbreviations['e2e']    = 'end-to-end';
 abbreviations['eCPM']   = 'effective cost per mille';
 abbreviations['EDGE']   = 'Enhanced Data rates for G.S.M. Evolution';
 abbreviations['EEA']    = 'European Economic Area';
@@ -73,6 +74,7 @@ abbreviations['IDFA']   = 'identifier for advertisers';
 abbreviations['IDFV']   = 'identifier for vendors';
 abbreviations['IFA']    = 'identifier for advertisers';
 abbreviations['IMPDAU'] = 'Impressions Per Daily Active User';
+abbreviations['Inc.']   = 'incorporated';
 abbreviations['IO']     = 'insertion order';
 abbreviations['iOS']    = 'iPhone Operating System';
 abbreviations['IP']     = 'Internet Protocol';
@@ -138,6 +140,7 @@ abbreviations['TCF']    = 'Transparency &amp; Consent Framework';
 abbreviations['TV']     = 'television';
 abbreviations['UA']     = 'user agent';
 abbreviations['UI']     = 'user interface';
+abbreviations['UK']     = 'United Kingdom';
 abbreviations['UMP']    = 'User Messaging Platform';
 abbreviations['UPL']    = 'Unreal Plugin Language';
 abbreviations['URI']    = 'Universal Resource Identifier';
