--- a/src/components/Glossary.astro
+++ b/src/components/Glossary.astro
@@ -311,6 +311,7 @@ glossary['rewarded video'] = { "page":'rewarded-video-ads', "title":'Rewarded vi
 glossary['roas'] = { "page":'roas', "title":'Return on Ad Spend, or ROAS, is an important KPI for developers…' };
 glossary['rtb'] = { "page":'rtb', "title":'Real-Time Bidding, or RTB, is a programmatic ad buying process…' };
 glossary['sdk'] = { "page":'sdk', "title":'A software development kit, or SDK, is essentially a pack of…' };
+glossary['sdks'] = { "page":'sdk', "title":'A software development kit, or SDK, is essentially a pack of…' };
 glossary['segmentation'] = { "page":'user-segmentation', "title":'User segmentation is the separation of users into groups based on shared characteristics, typically for targeting and data analysis purposes…' };
 glossary['sellers.json'] = { "page":'sellers-json', "title":'sellers.json is a standard provided by the Interactive Advertising Bureau that…' };
 glossary['simulation game'] = { "page":'simulation-games', "title":'Simulation games are a genre of games that are designed to mimic activities…' };
